# TradingAgents-CN

./: .env.docker  .env.example  .gitignore  README.md  docker-compose.hub.nginx.arm.yml  docker-compose.hub.nginx.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  test-coverage.yml
app/: __main__.py  main.py  worker.py
app/constants/: model_capabilities.py
app/core/: config.py  config_bridge.py  config_compat.py  database.py  dev_config.py  logging_config.py  logging_context.py  mapping_loader.py  rate_limiter.py  redis_client.py  singleton.py  startup_validator.py  unified_config.py
app/middleware/: error_handler.py  operation_log_middleware.py  rate_limit.py  request_id.py
app/models/: __init__.py  analysis.py  config.py  notification.py  operation_log.py  screening.py  stock_models.py  user.py
app/routers/: akshare_init.py  analysis.py  auth_db.py  baostock_init.py  cache.py  config.py  database.py  favorites.py  financial_data.py  health.py  historical_data.py  internal_messages.py  logs.py  model_capabilities.py  multi_market_stocks.py  multi_period_sync.py  multi_source_sync.py  news_data.py  notifications.py  operation_logs.py  paper.py  reports.py  scheduler.py  screening.py  social_media.py  sse.py  stock_data.py  stock_sync.py  stocks.py  system_config.py  tags.py  tushare_init.py  usage_statistics.py  websocket_notifications.py
app/scripts/: init_providers.py  migrate_mongo_db.py  normalize_provider_keys.py
app/services/: analysis_service.py  auth_service.py  basics_sync_service.py  config_events.py  config_provider.py  config_service.py  data_consistency_checker.py  database_screening_service.py  database_service.py  enhanced_screening_service.py  favorites_service.py  financial_data_service.py  foreign_stock_service.py  historical_data_service.py  internal_message_service.py  log_export_service.py  memory_state_manager.py  model_capability_service.py  multi_source_basics_sync_service.py  news_data_service.py  notifications_service.py  operation_log_service.py  queue_service.py  quotes_ingestion_service.py  quotes_service.py  redis_progress_tracker.py  scheduler_service.py  screening_service.py  simple_analysis_service.py  social_media_service.py  stock_data_service.py  tags_service.py  unified_stock_service.py  usage_statistics_service.py  user_service.py  websocket_manager.py
app/utils/: api_key_utils.py  error_formatter.py  report_exporter.py  timezone.py  trading_time.py
app/worker/: akshare_init_service.py  akshare_sync_service.py  analysis_worker.py  baostock_init_service.py  baostock_sync_service.py  example_sdk_sync_service.py  financial_data_sync_service.py  hk_data_service.py  hk_sync_service.py  multi_period_sync_service.py  news_data_sync_service.py  tushare_init_service.py  tushare_sync_service.py  us_data_service.py  us_sync_service.py
cli/: main.py
config/mappings/: analysis_mappings.yaml  market_mappings.yaml  provider_mappings.yaml  ui_mappings.yaml
docs/: LLM_ADAPTER_TEMPLATE.py
frontend/: .eslintrc-auto-import.json  package.json
scripts/: test_database_api.py  test_scheduler_frontend.py  test_unified_time_estimation.py  update_db_api_keys.py
tests/: TEST_GUIDELINES.md  akshare_check_fixed.py  akshare_isolated_test.py  conftest.py  debug_akshare_daily_basic.py  debug_baostock_stock_list.py  debug_deepseek_cost.py  debug_deepseek_cost_issue.py  debug_full_flow.py  debug_test_execution.py  debug_tool_binding_issue.py  debug_web_issue.py  final_gemini_test.py  fundamentals_analyst_clean.py  pytest.ini  quick_akshare_check.py  quick_redis_test.py  quick_test.py  simple_akshare_test.py  simple_env_test.py  test_000002_valuation.py  test_002027_specific.py  test_agent_utils_tushare_fix.py  test_akshare_alternative.py  test_akshare_amount.py  test_akshare_code_format.py  test_akshare_debug.py  test_akshare_direct.py  test_akshare_fixed.py  test_akshare_functionality.py  test_akshare_hk_apis.py  test_akshare_performance.py  test_akshare_priority.py  test_akshare_priority_clean.py  test_akshare_priority_fix.py  test_all_apis.py  test_amplitude_api.py  test_analysis.py  test_analysis_result.py  test_analysis_with_apis.py  (+183 more)
tests/0.1.14/: create_sample_reports.py  test_analysis_save.py  test_data_structure.py  test_google_tool_handler_fix.py  test_real_scenario_fix.py  test_tool_selection_logic.py
tests/config/: test_config_cache.py  test_logging_config.py
tests/performance/: README.md  (+11 more)
tradingagents/: __init__.py
utils/: check_version_consistency.py  cleanup_unnecessary_dirs.py  data_config.py  update_data_source_references.py
web/: app.py
(+131 files in other folders)
